# gnome-terminal

./: .cvsignore  .dir-locals.el  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  ChangeLog.README  ChangeLog.pre-2-23  HACKING  MAINTAINERS  Makefile.am  Makefile.meson  NEWS  README  README.md  TODO  acconfig.h  autogen.sh  configure.ac  configure.in  git.mk  gnome-terminal.appdata.xml.in  gnome-terminal.applications  gnome-terminal.desktop.in  gnome-terminal.desktop.in.in  gnome-terminal.doap  local_run.md  meson.build  meson_changelog.sh  meson_options.txt  meson_post_install.py  org.gnome.Terminal.Nautilus.appdata.xml.in  org.gnome.Terminal.Nautilus.metainfo.xml.in  org.gnome.Terminal.appdata.xml.in  org.gnome.Terminal.desktop.in.in
.cache/clangd/index/: eggshell.cc.B5D3BBF276EACB6C.idx  eggshell.hh.8CB896B33707CDA7.idx  prefs-main.cc.223B4DF6F3A1A68E.idx  server.cc.A4E5C43208C41302.idx  terminal-accel-dialog.cc.E0B397EFB5D72563.idx  terminal-accel-dialog.hh.62F3954EC225D446.idx  terminal-accel-row.cc.9146C75E5015322E.idx  terminal-accel-row.hh.9C30BD697D3559B7.idx  terminal-accels.cc.43CAD7098E04C359.idx  terminal-accels.hh.26946D03AB95AFAF.idx  terminal-app.cc.BC219F63A03F9BFC.idx  terminal-app.hh.901A08CB89EE55A6.idx  terminal-client-utils.cc.4543DFCE34FA2ABA.idx  terminal-client-utils.hh.110B9B0A45A8C1C4.idx  terminal-color-row.cc.1694258CABD79606.idx  terminal-color-row.hh.E341135DF2303BA4.idx  terminal-debug.cc.24B299ABD4D5B8DD.idx  terminal-debug.hh.C2AD380AF80151F6.idx  (+60 more)
.gitlab-ci/: make-release.sh
data/: Makefile.am  meson.build  meson_desktopfile.py  meson_metainfofile.py  metainfo.its  org.gnome.Terminal.Nautilus.metainfo.xml.in  org.gnome.Terminal.Preferences.desktop.in  org.gnome.Terminal.desktop.in  org.gnome.Terminal.metainfo.xml.in  ui-filter-mnemonics.xslt  ui-filter-no-mnemonics.xslt
data/icons/: Makefile.am  meson.build  meson_updateiconcache.py
help/: ChangeLog  ChangeLog.pre-2-23  LINGUAS  Makefile.am  gnome-terminal.omf.in  meson.build  xmldocs.make
help/C/: Makefile.am  adv-custom-colors.page  adv-custom-colors.page.stub  adv-keyboard-shortcuts.page  app-colors.page  app-colors.page.stub  app-cursor.page  app-fonts.page  app-full-screen.page  app-fullscreen.page  app-terminal-sizes.page  app-zoom-in-out.page  app-zoom.page  colors-basic.page  copy-paste.page  cursor.page  gnome-terminal-C.omf  gnome-terminal.xml  gs-execute-commands.page  gs-run-program.page  gs-tabbed-terminals.page  gs-tabs.page  index.docbook  index.page  introduction.page  keystrokes.page  l10n.txt  legal.xml  open-terminal.page  overview.page  overview1.page  pref-app-background.page  pref-bell.page  pref-compatibility.page  pref-compatibility.page.stub  pref-custom-command.page  pref-custom-exit.page  pref-custom-shells.page  pref-customexit.page  pref-customshells.page  (+50 more)
help/bg/: Makefile.am  gnome-terminal-bg.omf  gnome-terminal.xml  legal.xml
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: Makefile.am  de.po  gnome-terminal-de.omf  gnome-terminal.xml  legal.xml
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: .cvsignore  Makefile.am  es.po  gnome-terminal-es.omf  gnome-terminal.xml  legal.xml
help/eu/: eu.po
help/fi/: fi.po
help/fr/: Makefile.am  fr.po  gnome-terminal-fr.omf  gnome-terminal.xml  legal.xml
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: Makefile.am  gnome-terminal-it.omf  gnome-terminal.xml  it.po  legal.xml
help/ja/: Makefile.am  gnome-terminal-ja.omf  gnome-terminal.xml
help/ka/: ka.po
help/ko/: Makefile.am  gnome-terminal-ko.omf  gnome-terminal.xml  ko.po  legal.xml
help/oc/: oc.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: .cvsignore  Makefile.am  gnome-terminal-ro.omf  gnome-terminal.xml  ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: Makefile.am  gnome-terminal-sv.omf  gnome-terminal.xml  legal.xml  sv.po
help/te/: te.po
help/tr/: tr.po
help/uk/: Makefile.am  gnome-terminal-uk.omf  gnome-terminal.xml  uk.po
help/zh_CN/: Makefile.am  gnome-terminal-zh_CN.omf  gnome-terminal.xml  legal.xml  zh_CN.po
help/zh_TW/: Makefile.am  gnome-terminal-zh_TW.omf  gnome-terminal.xml  legal.xml
m4/: .cvsignore
man/: Makefile.am  gnome-terminal.xml  meson.build
omf-install/: Makefile.am
po/: .cvsignore  ChangeLog  ChangeLog.pre-2-23  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  (+71 more)
src/: .cvsignore  Makefile.am  client.c  client.gresource.xml  client.vapi  config.vapi  eggaccelerators.c  eggaccelerators.h  eggcellrendererkeys.c  eggcellrendererkeys.h  eggdesktopfile.c  eggdesktopfile.h  eggshell.c  eggshell.cc  eggshell.h  eggshell.hh  eggsmclient-libgnomeui.c  eggsmclient-libgnomeui.h  eggsmclient-osx.c  eggsmclient-private.h  eggsmclient-win32.c  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h  eggusershell.c  eggusershell.h  encoding.c  encoding.h  encodings-dialog.glade  encodings-dialog.ui  external.gschema.xml  extra-strings.c  find-dialog.glade  find-dialog.ui  gnome-terminal-search-provider.ini  gnome-terminal-server.service.in  gnome-terminal.glade  gnome-terminal.glade2  gnome-terminal.schemas  gnome-terminal.schemas.in  (+248 more)
src/Attic/eel/: Makefile.am  eel-art-extensions.c  eel-art-extensions.h  eel-debug.c  eel-debug.h  eel-ellipsizing-label.c  eel-ellipsizing-label.h  eel-glib-extensions.c  eel-glib-extensions.h  eel-lib-self-check-functions.h  eel-pango-extensions.c  eel-pango-extensions.h  eel-self-checks.c  eel-self-checks.h  eel-string-list.c  eel-string-list.h  eel-string.c  eel-string.h  update-from-eel.sh
src/skey/: .cvsignore  00readme  Makefile.am  README  btoe.c  btoe.h  config.h  donkey.c  donkey.h  md.c  md.h  md2.c  md4.c  md4.h  md5.c  md5.h  sha1.c  sha1.h  skey.c  skey.h  skeyutil.c  skeyutil.h  tailor.h  test.c
subprojects/: vte.wrap
